Corregimos el README

--- a/MatematicasDiscretas.tex
+++ b/MatematicasDiscretas.tex
@@ -298,7 +298,8 @@
     cometa pequeños errores de vez en cuando.
 
     Estos textos están creados como una base con la que tu puedas leer rápidamente todo lo que he aprendido
-    a lo largo del tiempo y que usándolo tu puedas profundizar más en estos conceptos.
+    a lo largo del tiempo, aprender los conceptos más importantes y que usándo esto tu puedas profundizar
+    más en la maravilla que es aprender más sobre este maravilloso mundo.
 
     Este texto esta publicado bajo la GPL, por lo tanto es software libre y tu tienes el control total sobre
     el, puedes descargar este texto, puedes ver su código fuente, puedes modificarlo y puedes distribuir este
