--- a/MatematicasDiscretas.tex
+++ b/MatematicasDiscretas.tex
@@ -304,7 +304,8 @@
     Este texto esta publicado bajo la GPL, por lo tanto es software libre y tu tienes el control total sobre
     el, puedes descargar este texto, puedes ver su código fuente, puedes modificarlo y puedes distribuir este
     texto y sus versiones modificadas, puedes acceder a todo lo que necesitas 
-    \href{http://www.github.com/CompilandoConocimiento/LibroMatematicasDiscretas}{\underline{aquí}} 
+    \href{http://www.github.com/CompilandoConocimiento/LibroMatematicasDiscretas}
+    {\underline{en el Repositorio del Libro de Matemáticas Discretas}}.
 
     Cualquier pregunta, comentario o si quieres contactar conmigo no dudes en escribir el email del proyecto:
     CompilandoConocimiento@gmail.com
