Pequeña corrección en inyectivas-suprayectiva

--- a/MatematicasDiscretas.tex
+++ b/MatematicasDiscretas.tex
@@ -2765,7 +2765,7 @@
             % =======================================
             \subsection{Funciones Inyectivas}
 
-                \Quote{Una función es aquella en la que una línea horizontal NUNCA toca más de un
+                \Quote{Una función inyectiva es aquella en la que una línea horizontal NUNCA toca más de un
                 punto de la función}.
 
                 Una función es inyectiva si a cada valor del conjunto dominio le corresponde un valor
@@ -2810,7 +2810,7 @@
             \clearpage
             \subsection{Suprayectivas}
 
-                \Quote{Una función es aquella en la que una línea horizontal SIEMPRE toca mínimo          
+                \Quote{Una función suprayectiva es aquella en la que una línea horizontal SIEMPRE toca mínimo          
                 punto de la función}.
 
                 Son funciones en las que cada elemento del rango tiene un elemento en A.
