--- a/LibroMatematicasDiscretas.tex
+++ b/LibroMatematicasDiscretas.tex
@@ -3212,6 +3212,449 @@
 
 
 
+        % =====================================================
+        % ==========              EJEMPLOS            =========
+        % =====================================================
+        \clearpage
+        \section{Ejemplos}
+
+
+            % ===============================================
+            % ========              1                 =======
+            % ===============================================
+            \clearpage
+            \subsection*{Ejemplo 1}
+
+                Prueba que:
+                \begin{equation*}
+                    1^2 + 3^2 + 5^2 + (2n + 1)^2 = \dfrac{(n+1)(2n+1)(2n+3)}{3} \Space \forall n \in \Naturals 
+                \end{equation*}
+
+                % ======== DEMOSTRACION ========
+                \begin{SmallIndentation}[1em]
+                    \textbf{Demostración}:
+
+                    \begin{itemize}
+                        \item Por un lado tenemos que para n = 0 entonces tenemos que:
+                            \begin{MultiLineEquation*}{3}
+                                \sum_{i=0}^0 (2n + 1)^2
+                                    = 1
+                                    = \dfrac{3}{3}
+                                    = \dfrac{(1)(1)(3)}{3}
+                                    = \dfrac{(1)(1)(3)}{3}
+                                    = \dfrac{(0+1)(2(0)+1)(2(0)+3)}{3}
+                            \end{MultiLineEquation*}
+
+                            Por lo tanto el caso base se cumple.
+                        
+                        \item Supongamos entonces válido $\sum_{i=0}^n (2n + 1)^2 = \dfrac{(n+1)(2n+1)(2n+3)}{3}$
+                        para alguna $n$.
+
+                        Entonces tenemos que:
+                        \begin{MultiLineEquation*}{3}
+                            \sum_{i=0}^{n+1} (2n + 1)^2 
+                                &= \sum_{i=0}^n (2n + 1)^2 + (2(n+1) + 1)^2                     \\
+                                &= \dfrac{(n+1)(2n+1)(2n+3)}{3} + (2(n+1) + 1)^2                \\
+                                &= \dfrac{(n+1)(2n+1)(2n+3)}{3} + \dfrac{3(2n+3)(2n+3)}{3}      \\
+                                &= (2n+3) \Wrap{\dfrac{(n+1)(2n+1)}{3} + \dfrac{3(2n+3)}{3}}    \\
+                                &= (2n+3) \Wrap{\dfrac{(n+1)(2n+1)3(2n+3)}{3}}                  \\
+                                &= (2n+3) \Wrap{\dfrac{2n^2 + 9n + 10}{3}}                      \\
+                                &= \dfrac{(n+2)(2n+3)(2n+5)}{3}                                 \\
+                                &= \dfrac{( (n+1) + 1)(2(n+1)+1)(2(n+1)+3)}{3}                  
+                        \end{MultiLineEquation*}
+
+                        Y esto es justo lo que la fórmula predijo, y ya que vimos que se cumple
+                        para $0$ y que si se cumple para $n$ entonces se cumple para $n+1$ entonces
+                        tenemos que dicha fórmula es válida para todos los naturales.
+                        
+                    \end{itemize}
+
+                    
+
+                \end{SmallIndentation}
+
+            % ===============================================
+            % ========              2                 =======
+            % ===============================================
+            \clearpage
+            \subsection*{Ejemplo 2}
+
+                Prueba que:
+                \begin{equation*}
+                    3 + 3*5 + 3*5^2 + \dots + 3*5^n = \sum_{i=0}^n 3 * 5^i = 3\dfrac{5^{n+1} - 1}{4}
+                    \Space \forall n \in \Naturals 
+                \end{equation*}
+
+                % ======== DEMOSTRACION ========
+                \begin{SmallIndentation}[1em]
+                    \textbf{Demostración}:
+
+                    \begin{itemize}
+                        \item Por un lado tenemos que para n = 0 entonces tenemos que:
+                            \begin{MultiLineEquation*}{3}
+                                \sum_{i=0}^0 3 * 5^i
+                                    = 3
+                                    = 3 * \dfrac{4}{4}
+                                    = 3 * \dfrac{5-1}{4}
+                                    = 3 * \dfrac{5^{0+1} - 1}{4}
+                            \end{MultiLineEquation*}
+
+                            Por lo tanto el caso base se cumple.
+                        
+                        \item Supongamos entonces válido $\sum_{i=0}^n 3 * 5^i = 3\dfrac{5^{n+1} - 1}{4}$
+                        para alguna $n$.
+
+                        Entonces tenemos que:
+                        \begin{MultiLineEquation*}{3}
+                            \sum_{i=0}^{n+1} 3 * 5^i
+                                &= \sum_{i=0}^{n} 3 * 5^i + 3* 5^{n+1}                  \\                  
+                                &= 3\dfrac{5^{n+1} - 1}{4} + 3* 5^{n+1}                 \\                  
+                                &= 3\dfrac{5^{n+1} - 1}{4} + 3\dfrac{4* 5^{n+1}}{4}     \\                  
+                                &= 3\dfrac{5^{n+1} - 1 + 4* 5^{n+1}}{4}                 \\                  
+                                &= 3\dfrac{5 * 5^{n+1} - 1}{4}                          \\                  
+                                &= 3\dfrac{5^{n+2} - 1}{4}                              \\                  
+                                &= 3\dfrac{5^{(n+1)+1} - 1}{4} 
+                        \end{MultiLineEquation*}
+
+                        Y esto es justo lo que la fórmula predijo, y ya que vimos que se cumple
+                        para $0$ y que si se cumple para $n$ entonces se cumple para $n+1$ entonces
+                        tenemos que dicha fórmula es válida para todos los naturales.
+                        
+                    \end{itemize}
+
+                    
+
+                \end{SmallIndentation}
+
+            % ===============================================
+            % ========              3                 =======
+            % ===============================================
+            \clearpage
+            \subsection*{Ejemplo 3}
+
+                Prueba que:
+                \begin{equation*}
+                    2 - 2*7 + 2*7^2 + \dots + 2*(-7)^n = \sum_{i=0}^n 2 * (-7)^i = \dfrac{1 - (-7)^{n+1}}{4}
+                    \Space \forall n \in \Naturals 
+                \end{equation*}
+
+                % ======== DEMOSTRACION ========
+                \begin{SmallIndentation}[1em]
+                    \textbf{Demostración}:
+
+                    \begin{itemize}
+                        \item Por un lado tenemos que para n = 0 entonces tenemos que:
+                            \begin{MultiLineEquation*}{3}
+                                \sum_{i=0}^0 2* (-7)^i
+                                    = 2
+                                    = \dfrac{8}{4}
+                                    = \dfrac{1 - (-7)}{4}
+                                    = \dfrac{1 - (-7)^{0+1}}{4}
+                            \end{MultiLineEquation*}
+
+                            Por lo tanto el caso base se cumple.
+                        
+                        \item Supongamos entonces válido $\sum_{i=0}^n 2 * (-7)^i = \dfrac{1 - (-7)^{n+1}}{4}$
+                        para alguna $n$.
+
+                        Entonces tenemos que:
+                        \begin{MultiLineEquation*}{3}
+                            \sum_{i=0}^{n+1} 3 * 5^i
+                                &= \sum_{i=0}^{n+1} 2 * (-7)^i                         \\                  
+                                &= \sum_{i=0}^n 2 * (-7)^i + 2*(-7)^{n+1}              \\                  
+                                &= \dfrac{1 - (-7)^{n+1}}{4} + 2*(-7)^{n+1}            \\                  
+                                &= \dfrac{1 - (-7)^{n+1}}{4} + \dfrac{8*(-7)^{n+1}}{4} \\                  
+                                &= \dfrac{1 - (-7)^{n+1} + 8*(-7)^{n+1}}{4}            \\                  
+                                &= \dfrac{1 + 7(-7)^{n+1}}{4}                          \\                  
+                                &= \dfrac{1 - (-7)(-7)^{n+1}}{4}                        \\                  
+                                &= \dfrac{1 - (-7)^{(n+1)+1}}{4}                       \\                  
+                        \end{MultiLineEquation*}
+
+                        Y esto es justo lo que la fórmula predijo, y ya que vimos que se cumple
+                        para $0$ y que si se cumple para $n$ entonces se cumple para $n+1$ entonces
+                        tenemos que dicha fórmula es válida para todos los naturales.
+                        
+                    \end{itemize}
+
+                    
+
+                \end{SmallIndentation}
+
+            % ===============================================
+            % ========              4                 =======
+            % ===============================================
+            \clearpage
+            \subsection*{Ejemplo 4}
+
+                Prueba que:
+                \begin{equation*}
+                    \sum_{k=1}^n k * 2^k = (n-1)2^{n+1} + 2
+                    \Space \forall n \in \Naturals 
+                \end{equation*}
+
+                % ======== DEMOSTRACION ========
+                \begin{SmallIndentation}[1em]
+                    \textbf{Demostración}:
+
+                    \begin{itemize}
+                        \item Por un lado tenemos que para n = 1 entonces tenemos que:
+                            \begin{MultiLineEquation*}{3}
+                                \sum_{k=1}^1 k 2^k
+                                    = 1 * 2
+                                    = 2
+                                    = (0) + 2
+                                    = (0)2^{1} + 2
+                            \end{MultiLineEquation*}
+
+                            Por lo tanto el caso base se cumple.
+                        
+                        \item Supongamos entonces válido $\sum_{k=1}^n k * 2^k = (n-1)2^{n+1} + 2$
+                        para alguna $n$.
+
+                        Entonces tenemos que:
+                        \begin{MultiLineEquation*}{3}
+                            \sum_{k=1}^{n+1} k * 2^k
+                                &= \sum_{k=1}^n k * 2^k + (n+1) * 2^{n+1}          \\                  
+                                &= (n-1)2^{n+1} + 2 + (n+1) * 2^{n+1}              \\                  
+                                &= (n-1)2^{n+1} + 2 + (n-1) * 2^{n+1} + 2^{n+2}    \\                  
+                                &= (n-1)2^{n+1} + (n-1) * 2^{n+1} + 2 + 2^{n+2}    \\                  
+                                &= (n-1)(2^{n+1} + 2^{n+1}) + 2 + 2^{n+2}          \\                  
+                                &= (n-1)(2 * 2^{n+1}) + 2 + 2^{n+2}                \\                  
+                                &= (n-1)(2^{(n+1)+1}) + 2 + 2^{n+2}                \\                  
+                                &= (n)(2^{(n+1)+1}) + 2                             \\                  
+                                &= ((n + 1) - 1)(2^{(n+1)+1}) + 2               
+                        \end{MultiLineEquation*}
+
+                        Y esto es justo lo que la fórmula predijo, y ya que vimos que se cumple
+                        para $1$ y que si se cumple para $n$ entonces se cumple para $n+1$ entonces
+                        tenemos que dicha fórmula es válida para todos los naturales.
+                        
+                    \end{itemize}
+
+                    
+
+                \end{SmallIndentation}
+
+
+            % ===============================================
+            % ========              5                 =======
+            % ===============================================
+            \clearpage
+            \subsection*{Ejemplo 5}
+
+                Prueba que:
+                \begin{equation*}
+                    2 | n^2 + n 
+                    \Space \forall n \in \Naturals 
+                \end{equation*}
+
+                % ======== DEMOSTRACION ========
+                \begin{SmallIndentation}[1em]
+                    \textbf{Demostración}:
+
+                    \begin{itemize}
+                        \item Por un lado tenemos que para n = 1 entonces tenemos que:
+                            \begin{MultiLineEquation*}{3}
+                                2 | 1^2 + 1 = 2 | 2
+                            \end{MultiLineEquation*}
+
+                            Por lo tanto el caso base se cumple.
+                        
+                        \item Supongamos entonces válido $2 | n^2 + n$, es decir 
+                        $n^2+n=2k$ para alguna $n$.
+
+                        Entonces tenemos que:
+                        \begin{MultiLineEquation*}{3}
+                        (n+1)^2 + (n+1) 
+                                &= n^2 + 2n + 1 + (n+1)                         \\                  
+                                &= n^2 + 2n + 1 + (n+1)                         \\                  
+                                &= n^2 + n + n + 1 + (n+1)                      \\                  
+                                &= 2k + n + 1 + (n+1)                           \\                  
+                                &= 2k + 2n + 2                                  \\                  
+                                &= 2(k + n + 1)                                 \\                  
+                        \end{MultiLineEquation*}
+
+                        Y esto es justo lo que queriamos ver, que $2 | (n+1)^2 + (n+1)$, y ya que vimos que se cumple
+                        para $1$ y que si se cumple para $n$ entonces se cumple para $n+1$ entonces
+                        tenemos que dicha fórmula es válida para todos los naturales.
+                        
+                    \end{itemize}
+
+                \end{SmallIndentation}
+
+
+            % ===============================================
+            % ========              6                 =======
+            % ===============================================
+            \clearpage
+            \subsection*{Ejemplo 6}
+
+                Prueba que:
+                \begin{equation*}
+                    3 | n^3 + 2n 
+                    \Space \forall n \in \Naturals 
+                \end{equation*}
+
+                % ======== DEMOSTRACION ========
+                \begin{SmallIndentation}[1em]
+                    \textbf{Demostración}:
+
+                    \begin{itemize}
+                        \item Por un lado tenemos que para n = 1 entonces tenemos que:
+                            \begin{MultiLineEquation*}{3}
+                                3 | 1^3 + 2(1) = 3 | 3
+                            \end{MultiLineEquation*}
+
+                            Por lo tanto el caso base se cumple.
+                        
+                        \item Supongamos entonces válido $3 | n^3 + 2n$, es decir 
+                        $n^3+2n=3k$ para alguna $n$.
+
+                        Entonces tenemos que:
+                        \begin{MultiLineEquation*}{3}
+                        (n+1)^3 + 2(n+1) 
+                                &= (n+1)(n^2+2n+1) + 2(n+1)                          \\                  
+                                &= (n^3+2n^2+n) + (n^2+2n+1) + 2(n+1)                \\                  
+                                &= (n^3+n) + 2n^2 + (n^2+2n+1) + 2(n+1)              \\                  
+                                &= 3k + 3n^2 + (2n+1) + 2(n+1)                       \\                  
+                                &= 3k + 3n^2 + (3n+3)                                \\                  
+                                &= 3(k + n^2 + n + 1)
+                        \end{MultiLineEquation*}
+
+                        Y esto es justo lo que queriamos ver, que $3 | (n+1)^3 + 2(n+1)$, y ya que vimos que se cumple
+                        para $1$ y que si se cumple para $n$ entonces se cumple para $n+1$ entonces
+                        tenemos que dicha fórmula es válida para todos los naturales.
+                        
+                    \end{itemize}
+
+                \end{SmallIndentation}
+
+
+            % ===============================================
+            % ========              7                 =======
+            % ===============================================
+            \clearpage
+            \subsection*{Ejemplo 7}
+
+                Prueba que:
+                \begin{equation*}
+                    5 | n^5 - n
+                    \Space \forall n \in \Naturals 
+                \end{equation*}
+
+                % ======== DEMOSTRACION ========
+                \begin{SmallIndentation}[1em]
+                    \textbf{Demostración}:
+
+                    \begin{itemize}
+                        \item Por un lado tenemos que para n = 1 entonces tenemos que:
+                            \begin{MultiLineEquation*}{3}
+                                5 | 1^5 - 1 = 5 | 0
+                            \end{MultiLineEquation*}
+
+                            Y pues siempre se cumple que $ x | 0$.
+                            Por lo tanto el caso base se cumple.
+                        
+                        \item Supongamos entonces válido $5 | n^5 - n$, es decir 
+                        $n^5-n=5k$ para alguna $n$.
+
+                        Entonces tenemos que:
+                        \begin{MultiLineEquation*}{3}
+                        (n+1)^5 -(n+1) 
+                                &= (n+1)^5 -(n+1)                                   \\    
+                                &= n^5 + 5 n^4 + 10 n^3 + 10 n^2 + 5 n + 1 - (n+1)  \\    
+                                &= (n^5 - n) + 5 n^4 + 10 n^3 + 10 n^2 + 5 n        \\    
+                                &= 5k + 5 n^4 + 10 n^3 + 10 n^2 + 5 n               \\    
+                                &= 5(k + n^4 + 2 n^3 + 2 n^2 + 1 n) 
+                        \end{MultiLineEquation*}
+
+                        Y esto es justo lo que queriamos ver, que $5 | (n+1)^5 -(n+1)$, y ya que vimos que se cumple
+                        para $1$ y que si se cumple para $n$ entonces se cumple para $n+1$ entonces
+                        tenemos que dicha fórmula es válida para todos los naturales.
+                        
+                    \end{itemize}
+
+                \end{SmallIndentation}
+
+
+
+            % ===============================================
+            % ========              8                 =======
+            % ===============================================
+            \clearpage
+            \subsection*{Ejemplo 8}
+
+                Prueba que:
+                \begin{equation*}
+                    6 | n^3 - n
+                    \Space \forall n \in \Naturals 
+                \end{equation*}
+
+                % ======== DEMOSTRACION ========
+                \begin{SmallIndentation}[1em]
+                    \textbf{Demostración}:
+
+                    \begin{itemize}
+                        \item Por un lado tenemos que para n = 1 entonces tenemos que:
+                            \begin{MultiLineEquation*}{3}
+                                6 | 1^3 - 1 = 6 | 0
+                            \end{MultiLineEquation*}
+
+                            Y pues siempre se cumple que $ x | 0$.
+                            Por lo tanto el caso base se cumple.
+                        
+                        \item Supongamos entonces válido $6 | n^3 - n$, es decir 
+                        $n^3-n=6k$ para alguna $n$.
+
+                        Entonces tenemos que:
+                        \begin{MultiLineEquation*}{3}
+                        (n+1)^3 -(n+1) 
+                                &= (n+1)^3 -(n+1)                                   \\    
+                                &= n^3 + 3 n^2 + 3 n + 1 -(n+1)                     \\    
+                                &= n^3 -n  + 3 n^2 + 3 n                            \\    
+                                &= 6k + 3 n^2 + 3 n                                 \\    
+                                &= 6k + 3 (n^2 + n)                                 \\    
+                                &= 6k + 3 (2k')                                     \\    
+                                &= 6(k + k') 
+                        \end{MultiLineEquation*}
+
+                        Y esto es justo lo que queriamos ver, que $6 | (n+1)^3 -(n+1)$, y ya que vimos que se cumple
+                        para $1$ y que si se cumple para $n$ entonces se cumple para $n+1$ entonces
+                        tenemos que dicha fórmula es válida para todos los naturales.
+                        
+                    \end{itemize}
+
+                \end{SmallIndentation}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
