Add small notes about graphs

--- a/LibroMatematicasDiscretas.tex
+++ b/LibroMatematicasDiscretas.tex
@@ -4239,6 +4239,13 @@
                 Decimos que una grafica $G$ es bipartita si podemos crear otras dos
                 graficas $W, U$ tal que $\forall vw \in A(G) \lIff u \in U \text{ y } w \in W$.
 
+                Nota que:
+                \begin{itemize}
+                    \item Toda grafica bipartita no tiene ciclos impares
+                    \item El tamaño de una grafica bipartita de orden n es a lo mas
+                    $n^2 \over 2$
+                \end{itemize}
+
             % ==================================
             % =====       COMPLEMENTO   ========
             % ==================================
