--- a/LibroMatematicasDiscretas.tex
+++ b/LibroMatematicasDiscretas.tex
@@ -4246,6 +4246,12 @@
                     $n^2 \over 2$
                 \end{itemize}
 
+                Entonces:
+                \begin{itemize}
+                    \item $n_{G} = n_U + n_W$
+                    \item $m_{G+H} = m_G + m_H + n_G n_H$
+                \end{itemize}
+
             % ==================================
             % =====       COMPLEMENTO   ========
             % ==================================
@@ -4288,6 +4294,111 @@
                     \caption{Ejemplo}
                 \end{figure}
 
+            %===========+=======================
+            % =====       OPERACIONES   ========
+            % ==================================
+            \subsection{Operaciones}
+
+                \begin{itemize}
+                    \item 
+                        Si tenemos dos graficas $G, H$ ajenas en vertices entonces definimos a $G \cup H$ como:
+                        \begin{itemize}
+                            \item $V(G \cup H) = V(G) \cup V(H)$
+                            \item $A(G \cup H) = A(G) \cup A(H)$
+                        \end{itemize}
+
+                    \item 
+                        Si tenemos dos graficas $G, H$ ajenas en vertices entonces definimos a $G + H$ como:
+                        \begin{itemize}
+                            \item $V(G \cup H) = V(G) \cup V(H)$
+                            \item $A(G \cup H) = A(G) \cup A(H) \cup \Set{xy \Such x \in G \text{ y } y \in H}$
+                        \end{itemize}
+
+                        Entonces:
+                        \begin{itemize}
+                            \item $n_{G+H} = n_G + n_H$
+                            \item $m_{G+H} = m_G + m_H + n_G n_H$
+                        \end{itemize}
+
+                    \item 
+                        Si tenemos dos graficas $G, H$ ajenas en vertices entonces definimos a $G \times H$ como:
+                        \begin{itemize}
+                            \item $V(G \times H) = \Set{x, y \Such x \in G \text{ y } y \ in H} = V(G) \times V(H)$
+                            \item $A(G \times H) = \Set{(uv)(xy) \Such x \in G \text{ y } 
+                                v = y \text{ y } ux \in A(G) 
+                                \text{ o }
+                                u = x \text{ y } vy \in A(H) 
+                                }$
+                        \end{itemize}
+
+                        Entonces:
+                        \begin{itemize}
+                            \item $n_{G+H} = n_G + n_H$
+                            \item $m_{G+H} = m_G + m_H + n_G n_H$
+                        \end{itemize}
+
+                        \item 
+                        Si tenemos una grafica $G$ y un vertice $v \not \in V(H)$
+                        entonces definimos a $G + v$ como:
+                        \begin{itemize}
+                            \item $V(G + v) = V(G) \cup \Set{v}$
+                            \item $A(G + v) = A(G) \cup \Set{xy \Such y \in V(G)}$
+                        \end{itemize}
+
+                        \item 
+                        Si tenemos una grafica $G$ y un vertice $v\in V(H)$
+                        entonces definimos a $G - v$ como:
+                        \begin{itemize}
+                            \item $V(G - v) = V(G) - \Set{v}$
+                            \item $A(G - v) = A(G) - \Set{xv \Such xv[[]] \in A(G)}$
+                        \end{itemize}
+
+                        \item [[]]
+                        Si tenemos una grafica $G$ y una arista $xy \in A(H)$
+                        entonces definimos a $G + xy$ como:
+                        \begin{itemize}
+                            \item $V(G - v) = V(G) \cup \Set{x, y}$
+                            \item $A(G - v) = A(G) \cup \Set{xy}$
+                        \end{itemize}
+
+                \end{itemize}
+            
+            
+            %===================================
+            % =====   VERTICE DE CORTE     =====
+            % ==================================
+            \subsection{De Corte}
+
+            Decimos que un vertice $v$ es de corte, si $G-v$ tiene mas componentes de $G$.
+            
+            Decimos que una arista $xy$ es de corte / un puente si $G-xy$ tiene mas componentes de $G$.
+
+
+            Nota que una arista de corte puede aumentar el numero de componentes en solo 1, pero un vertice
+            de corte puede hacerlo en mucho mas de uno.
+
+
+            %===================================
+            % =====       DISTANCIA        =====
+            % ==================================
+            \subsection{Distancia}
+
+            La longitud de la trayectoria mas corta entre $v, y$ es llamada la distancia, en dado
+            caso de no existir (si no estan en la misma componente conexa) entonces por definicion decimos 
+            que es infinita.
+
+
+            %===================================
+            % =====       ARBOL            =====
+            % ==================================
+            \subsection{Arbol}
+
+            Una grafica $G$ es un arbol si es conexa y ademas no tiene ciclos.
+            Decimos que una union de arboles como bosques.
+            
+            Otra definicion alterna es que toda arista es un puente.
+
+            Para un arbol de orden $n$ hay $m = n - 1$
 
         % =====================================================
         % ==========              TEOREMAS            =========
@@ -4405,6 +4516,19 @@
 
                 Todo ciclo tiene exactamente dos trayectorias independientes entre cualquiera
                 dos verticesbu.
+
+                Toda graficca bipartita no tiene ciclos impares.
+
+
+            % ==================================
+            % =========     CONEXAS      =======
+            % ==================================
+            \subsection{Conexas}
+
+            \begin{itemize}
+                \item Sea $G$ una grafica conexa de orden $n$ y tamano $m$, si $n \geq 2$ entonces $m \geq n - 1$
+            \end{itemize}
+
 
 
 
