--- a/LibroMatematicasDiscretas.tex
+++ b/LibroMatematicasDiscretas.tex
@@ -4398,7 +4398,6 @@
             
             Otra definicion alterna es que toda arista es un puente.
 
-            Para un arbol de orden $n$ hay $m = n - 1$
 
         % =====================================================
         % ==========              TEOREMAS            =========
@@ -4529,6 +4528,17 @@
                 \item Sea $G$ una grafica conexa de orden $n$ y tamano $m$, si $n \geq 2$ entonces $m \geq n - 1$
             \end{itemize}
 
+
+            % ==================================
+            % =========     ARBOLES      =======
+            % ==================================
+            \subsection{Arboles}
+
+            \begin{itemize}
+                \item Para un arbol de orden $n$ hay $m = n - 1$
+                \item Una grafica es un arbol si y solo si existe un unico camino entre cuales quiera dos vertices
+                \item Tienen al menos dos vertices de grado 1.
+            \end{itemize}
 
 
 
